[package]
name = "bitcoin-script"
version = "0.1.0"
authors = ["Matt Bell <mappum@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.23.0"
quote = "1.0.2"
proc-macro-error = "0.4.9"
lazy_static = "1.4.0"
hex = "0.4.2"
