[package]
name = "bitcoin-script"
version = "0.1.2"
authors = ["Matt Bell <mappum@gmail.com>"]
edition = "2018"
description = "Inline Bitcoin scripts"
license = "MIT"
repository = "https://github.com/mappum/rust-bitcoin-script"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.29.2"
quote = "1.0.23"
proc-macro-error = "1.0.4"
lazy_static = "1.4.0"
hex = "0.4.3"
proc-macro2 = "1.0.51"
